updated index.html wc

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
               de navigare sau alte elemente de navigare
                pentru o pagină web-->
          <div class="logo">
-         <img src="C:\Users\admin\OneDrive - Colegiul National Grigore Moisil Bucuresti\Desktop\myWork\CarsA.web\img.CarsA\car.png">
+         <img src="img.CarsA/car.png">
          </div>
          <div class="nav-links">
             <ul>
@@ -25,24 +25,24 @@
       </nav>
         <div class="information">
             <div class="overlay"></div>
-            <img src=  "C:\Users\admin\OneDrive - Colegiul National Grigore Moisil Bucuresti\Desktop\myWork\CarsA.web\img.CarsA\cars.png"   class="cars">
+            <img src=  "img.CarsA/cars.png" class="cars">
             <div id="circle">
                 <div class="feature one">
-                    <img src="C:\Users\admin\OneDrive - Colegiul National Grigore Moisil Bucuresti\Desktop\myWork\CarsA.web\img.CarsA\combustibil.png">
+                    <img src="img.CarsA/combustibil.png">
                     <div>
                         <h3>Elemente esențiale</h3>
                         <p> Consum 0.8-7.8 litri/100 km</p>
                     </div>
                 </div>
                 <div class="feature two">
-                    <img src="C:\Users\admin\OneDrive - Colegiul National Grigore Moisil Bucuresti\Desktop\myWork\CarsA.web\img.CarsA\setting.png">
+                    <img src="img.CarsA/setting.png">
                 <div>
                     <h3>Configurare autovehicul</h3>
                 <p>Tu alegi, noi facem magie</p>
                 </div>
                 </div>
                 <div class="feature three">
-                    <img src="C:\Users\admin\OneDrive - Colegiul National Grigore Moisil Bucuresti\Desktop\myWork\CarsA.web\img.CarsA\testdrive.png">
+                    <img src="img.CarsA/testdrive.png">
                <div>
                     <h3>Test drive</h3>
                     <p>Programează-te acum </p>
@@ -51,9 +51,9 @@
              </div>
              </div>
               <div class="controls">
-                <img src= "C:\Users\admin\OneDrive - Colegiul National Grigore Moisil Bucuresti\Desktop\myWork\CarsA.web\img.CarsA\jos.png" id="upBtn">
+                <img src= "img.CarsA/jos.png" id="upBtn">
                 <h4>Descoperă</h4>
-                <img src="C:\Users\admin\OneDrive - Colegiul National Grigore Moisil Bucuresti\Desktop\myWork\CarsA.web\img.CarsA\sus.png" id="downBtn">
+                <img src="img.CarsA/sus.png" id="downBtn">
               </div>
               </div>
                 
